--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/SopadeLetras5/nbproject/private/
+/SopadeLetras5/build/
+/SopadeLetras5/dist/
